--- a/Framework/ext-modules/psMenu/psMenu.css
+++ b/Framework/ext-modules/psMenu/psMenu.css
@@ -8,6 +8,10 @@
   padding-top: 30px;
 }
 
+.ps-menu-area ul{
+  padding-left:0;
+}
+
   .ps-menu-area .btn:hover {
     color: #ccc;
   }
@@ -17,19 +21,29 @@
   vertical-align: top;
 }
 
-.ps-menu ul {
+  .ps-menu ul {
     display: inline;
     list-style-type: none;
     padding-left: 0;
   }
 
-.ps-menu li {
+  .ps-menu li {
     line-height: 3em;
     cursor: pointer;
   }
 
+    .ps-menu li div {
+      display: inline-block;
+      width: 90%;
+      padding-left: 16px;
+    }
+
 .ps-selectable-item:hover {
   background-color: #555;
+}
+
+.ps-menu-icon {
+  margin-right: 10px;
 }
 
 .ps-noselect {
