--- a/Framework/ext-modules/psFramework/psFramework.css
+++ b/Framework/ext-modules/psFramework/psFramework.css
@@ -5,12 +5,12 @@
 }
 
 .ps-logo-area{
-  text-align:center;
+  /*text-align:center;*/
 }
 
 .ps-title-area{
   display:inline-block;
-  text-align:center;
+  /*text-align:center;*/
 }
 
 .ps-icon{
@@ -33,6 +33,16 @@
   margin-top:-13px;
 }
 
+@media screen and (max-width: 430px) {
+  .ps-icon{
+    display:none;
+  }
+
+  .ps-logo-title{
+    font-size:18px;
+  }
+}
+
 .ps-right-side-controls{
   line-height:60px;
   text-align:center;
@@ -46,4 +56,19 @@
   .ps-logo-area{
     text-align:left;
   }
+}
+
+.ps-collapsed-menu{
+  display:inline-block;
+  height:100%;
+}
+
+.ps-nav-button{
+  height:40px;
+  width:60px;
+  margin-top:10px;
+  border:1px solid #888;
+  padding:0;
+  font-size:26px;
+  color:#777;
 }
