--- a/Framework/ext-modules/psMenu/psMenu.css
+++ b/Framework/ext-modules/psMenu/psMenu.css
@@ -46,6 +46,13 @@
   margin-right: 10px;
 }
 
+.ps-menu-active-indicator{
+  float:right;
+  color:#ddd;
+  margin-right:0px;
+  margin-top:8px;
+}
+
 .ps-noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
