--- a/Framework/ext-modules/psMenu/psMenu.css
+++ b/Framework/ext-modules/psMenu/psMenu.css
@@ -60,3 +60,22 @@
   -ms-user-select: none;
   user-select: none;
 }
+
+.ps-group-indicator-left{
+  float:right;
+  color:#ddd;
+  margin-right:2px;
+  margin-top:15px;
+}
+
+.ps-subitem-section{
+  padding-left:16px;
+}
+
+.ps-menu-layout-button{
+  margin:12px;
+  padding: 2px 8px;
+  color:#bbb;
+  background-color: #333;
+  border: 1px solid #999;
+}
