--- a/Framework/ext-modules/psMenu/psMenu.css
+++ b/Framework/ext-modules/psMenu/psMenu.css
@@ -6,6 +6,7 @@
 }
 
 .ps-menu-area-vertical {
+  float:left;
   width: 200px;
   min-height: 100vh;
   padding-top: 30px;
@@ -57,7 +58,7 @@
 .ps-menu-active-indicator {
   float: right;
   color: #ddd;
-  margin-right: 0px;
+  margin-right: 0;
   margin-top: 8px;
 }
 
